# comp2215-pico-projects

BuzzerExample/: BuzzerExample.c  CMakeLists.txt
JukeBoxSD/: CMakeLists.txt  JukeBoxSD.c  hw_config.c  sample.h
JukeBoxSD/python_scripts/: README  Raspberry Pi Pico PWM Wave File Converter.ipynb  converter.ipynb
JukeBoxSD/python_scripts/.ipynb_checkpoints/: Raspberry Pi Pico PWM Wave File Converter-checkpoint.ipynb  converter-checkpoint.ipynb
JukeBoxSD/song_examples/: song1.ba  song2.ba  song3.ba  song4.ba
pico-fractal/: CMakeLists.txt  pico-fractal.c
pico-midi-ultra/: CMakeLists.txt  pico-midi-ultra.c
pico-tuner/: BuzzerExample.c  CMakeLists.txt
picosd/: CMakeLists.txt  SDCard.c
picosd/unused/: spi_io.c
